# hr-dashboard

./: .env.example  .eslintrc.js  .gitignore  README.md  commitlint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  codeql-analysis.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/seed/: demo-data.seed.ts  roles.seed.ts  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/ml-service/: main.py  pyproject.toml  requirements.txt
apps/ml-service/api/routes/: health.py  model_info.py  prediction.py
apps/ml-service/core/: config.py  database.py  exceptions.py  logging.py
apps/ml-service/feature_store/: registry.py  store.py  transformers.py
apps/ml-service/models/attrition/: config.py  features.py  model.py  preprocessor.py  trainer.py
apps/ml-service/models/recruitment/: config.py  features.py  model.py  preprocessor.py  trainer.py
apps/ml-service/models/sentiment/: config.py  model.py  preprocessor.py
apps/ml-service/schemas/: model_info.py  prediction.py
apps/web/: .env.local.example  .eslintrc.js  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: admin-manual.md  quick-manual.md  user-manual.md
docs/project/: folder-structure.md
infra/docker/: api.Dockerfile  docker-compose.yml  ml-service.Dockerfile  web.Dockerfile
infra/kubernetes/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
(+259 files in other folders)
